--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
         "sass-loader": "^7.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.10.0",
+        "push.js": "^1.0.12",
+        "pusher-js": "^7.0.3"
     }
 }
